WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144630
Some assertion failures in compositing code after
r183820
https://bugs.webkit.org/show_bug.cgi?id=144630
Summary
Some assertion failures in compositing code after r183820
Roger Fong
Reported
2015-05-05 10:06:35 PDT
All that was changed was removal of a z-index: 0 from the media control styles. This caused 5 tests to start generating assertion failures deep in compositing code, which implies an error with that code somehow. After a bit of debugging I've decided that I have no idea where to even begin with compositing stuff. The tests failing are: compositing/regions/transform-transparent-positioned-video-inside-region.html compositing/regions/video-in-overflow-region.html fast/regions/fullscreen/full-screen-video-from-region.html fast/regions/fullscreen/full-screen-video-in-region-crash.html fast/regions/inline-block-inside-anonymous-overflow.html Though they pass in release. In addition I have not hit the assertion just browsing around various videos using our controls in debug. I will skip these tests for now.
Attachments
Patch
(1.88 KB, patch)
2015-05-28 15:50 PDT
,
Simon Fraser (smfr)
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-05-05 10:07:18 PDT
<
rdar://problem/20819825
>
Roger Fong
Comment 2
2015-05-05 11:08:53 PDT
Simon is taking a look at these. Thanks Simon!
Simon Fraser (smfr)
Comment 3
2015-05-05 13:12:05 PDT
ASSERT(!layer.hasNotIsolatedCompositedBlendingDescendants() || layer.hasNotIsolatedBlendingDescendants());
Simon Fraser (smfr)
Comment 4
2015-05-05 14:06:35 PDT
Seems related to isolates blending, and regions.
Roger Fong
Comment 5
2015-05-05 16:50:08 PDT
Commented out assertion and unskipped tests here:
http://trac.webkit.org/changeset/183843
Keeping bug open to keep track of the assertion being commented out.
Simon Fraser (smfr)
Comment 6
2015-05-28 15:50:55 PDT
Created
attachment 253871
[details]
Patch
Alexey Proskuryakov
Comment 7
2015-05-28 15:53:10 PDT
Comment on
attachment 253871
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=253871&action=review
rs=me
> Source/WebCore/ChangeLog:9 > + escape the media elements, which was fixed in
r145420
.
This is probably
bug 145420
, not
r145420
.
Simon Fraser (smfr)
Comment 8
2015-05-29 10:52:37 PDT
https://trac.webkit.org/r184992
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug