Unreviewed. Some assertion failures in compositing code after r183820. https://bugs.webkit.org/show_bug.cgi?id=144630.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::computeCompositingRequirements):
* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/162677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183843 268f45cc-cd09-0410-ab3c-d52691b4dbfc